Updates from Overleaf

--- a/chap2-motivation_for_steriles.tex
+++ b/chap2-motivation_for_steriles.tex
@@ -4,7 +4,7 @@
 
 The neutrino was first postulated in 1930 by Pauli in an attempt to explain the continuous energy spectrum observed for the electrons from beta decay experiments \cite{Pauli_letter}. At the time it was assumed that along with the nucleus, an electron was the only other product from beta decays. That is, beta decay was thought to be a two body decay of the following form,
 \begin{equation}
-    {^A_Z}X \longrightarrow {^{\ \ A}_{Z+1}}Y + e^-
+    {^A_Z}X \longrightarrow {^{\ \ A}_{Z+1}}Y + e^-.
 \end{equation}
 The continuous energy spectrum of the electron was puzzling as it was expected that the electron would always have a fixed kinetic energy and observing electrons with a range of energies appeared to violate energy conservation. Pauli theorised that in addition to the electron, a neutral particle was also emitted in beta decays and that the sum of the energy of the electron and this neutral particle would be constant \cite{Pauli_letter}.
 
@@ -16,7 +16,7 @@ Following the discovery of the tau lepton in 1975 by the SLAC National Accelerat
 
 \textcolor{red}{More detail on the experiments?}
 
-The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z-boson since it's lifetime is dependent on the number of flavours. This was done by the \gls{lep} experiment, which found the lifetime of the Z-boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the LSND and MiniBooNE experiments, the deficit of events observed by the SAGE and GALLEX detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z-boson if they have a mass greater than half that of the Z-boson and/or they do not weakly interact and hence don't contribute to the decay rate of the Z-boson. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
+The three confirmed flavours of neutrinos ($\nu_e, \nu_{\mu}, \nu_{\tau}$) are consistent with predictions from the \Gls{sm}. The number of expected neutrinos may be determined from the decay of the Z-boson since it's lifetime is dependent on the number of flavours. This was done by the \gls{lep} experiment, which found the lifetime of the Z-boson to be consistent with a three neutrino model \cite{Zboson_number_of_neutrinos}\cite{LEP}. There have, however, been results from experiments which are inconsistent with the 3 neutrino framework. Namely the excess of events observed by the \gls{lsnd} and \gls{miniboone} experiments, the deficit of events observed by the \gls{sage} and \gls{gallex} detectors (dubbed the \textit{Gallium Anomaly}) and the deficit of events observed from nuclear reactors (dubbed the \textit{Reactor Anomaly}) \cite{LSND_excess} \cite{MiniBooNE_excess} \cite{GALLEX} \cite{Gallex_reanalysis} \cite{SAGE} \cite{Reactor_anomaly}. Additional neutrino flavours may exist and not contradict the statement on the lifetime of the Z-boson if they have a mass greater than half that of the Z-boson and/or they do not weakly interact and hence don't contribute to the decay rate of the Z-boson. The hypothetical neutrinos which do not weakly interact are know as \textit{sterile} neutrinos in order to distinguish them from the \textit{active} ones that do. Sterile neutrinos will be discussed in greater detail in \SectionRef{subchap:Motivation for Sterile Neutrinos} and \SectionRef{subchap:Theory of Sterile Neutrinos}.
 
 \section{Overview of Neutrino Physics}
 
@@ -56,7 +56,7 @@ The weak charged current, $j^{CC}_{weak}$ may be expressed as,
     j^{CC}_{weak} = \frac{g_w}{\sqrt{2}}\Bar{\psi}\gamma^{\mu}\frac{1}{2}(1-\gamma^5)\psi,
 \end{equation}
 where $g_w$ is the coupling factor.
-This has the form of a vector-axial (V-A) interaction, where the vector current is given by $\Bar{\psi}\gamma^\mu\psi$ and the axial current is given by $\Bar{\psi}\gamma^\mu\gamma^5\psi$. The axial component remains unchanged under a parity transformation, whereas the sign of the vector component changes. We are usually interested in the square of the amplitude, which in short means taking the square of the weak current. This results in a squared vector and axial component plus a cross term. Since the axial and vector components behave differently under a parity transformation, this cross term lead to parity violation. 
+This has the form of a vector-axial (V-A) interaction, where the vector current is given by $\Bar{\psi}\gamma^\mu\psi$ and the axial current is given by $\Bar{\psi}\gamma^\mu\gamma^5\psi$. The axial component remains unchanged under a parity transformation, whereas the sign of the vector component changes. We are usually interested in the square of the amplitude, which in short means taking the square of the weak current. This results in a squared vector and axial component plus a cross term. Since the axial and vector components behave differently under a parity transformation, this cross term leads to parity violation. 
 
 Because the projection operator, $P_L$, appears in \EquationRef{eqn:weak current} it follows that weak interactions only apply to left-handed particles (and right-handed antiparticles). Neutrinos only interact via the weak force which means they are therefore produced with a left-handed chirality and since they are ultra-relativistic, for all intents and purposes they also have a left-handed helicity \cite{Quarks_and_Leptons:_An_Introductor_Course_in_Modern_Particle_Physics_book}. 
 
@@ -67,7 +67,7 @@ One of the first experimental results to eventually be explained by neutrino osc
 \begin{equation}
     ^{37}Cl + \nue \longrightarrow {^{37}Ar} + \electron
 \end{equation}
-where the argon would be extracted and counted as it decayed. From this, the number of interacting electron neutrinos was determined, however this number was consistently about a third of the number expected by solar predictions. This inconsistency was latter dubbed the \textit{Solar Neutrino Problem} \cite{Homestake}.
+where the argon would be extracted and counted as it decayed. From this, the number of interacting electron neutrinos was determined, however this number was consistently about a third of the number expected by solar predictions. This inconsistency was later dubbed the \textit{Solar Neutrino Problem} \cite{Homestake}.
 
 The ratio of muon to electron neutrinos produced in the atmosphere from the decay of pions and muons was also studied. The predicted rate of neutrinos in the atmosphere was thought to be well understood, however a number of experiments, the most notable of which, \Gls{sk}, all observed ratios significantly below the expected value. This indicated a deficit in the observed muon neutrinos or an excess in electron neutrinos (or both). Mirroring the solar neutrino problem, these observation were dubbed the \textit{Atmospheric Neutrino Anomaly} \cite{Atmospheric_anomaly}.
 
@@ -132,11 +132,11 @@ It can be seen that the solution to \EquationRef{eqn:t.d. schrodinger} is given 
 \begin{equation}\label{eqn:plane wave soln}
     \ket{\nu_{k}(t)} = e^{-iE_{k}t} \ket{\nu_{k}}.
 \end{equation}
-The amplitude of a transition is defined as the projection of the final state onto the initial state, so for flavour oscillations the amplitude is given by
+The amplitude of a transition, $A_{\nu_\alpha \rightarrow \nu_\beta}(t)$, is defined as the projection of the final state onto the initial state, so for flavour oscillations the amplitude is given by
 \begin{equation}
     A_{\nu_\alpha \rightarrow \nu_\beta}(t) \isdefinedas \braket{\nu_\beta|\nu_\alpha(t)}.
 \end{equation}
-The probability of transition is then given by the absolute square of the amplitude
+The probability of transition, $P_{\nu_\alpha \rightarrow \nu_\beta}(t)$, is then given by the absolute square of the amplitude
 \begin{equation}
     P_{\nu_\alpha \rightarrow \nu_\beta}(t) = |A_{\nu_\alpha \rightarrow \nu_\beta}(t)|^2.
 \end{equation}
@@ -150,13 +150,13 @@ and that the transition amplitude is given by
 \end{equation}
 where we have used the fact that $\braket{\nu_j|\nu_k} = \Kronecker_{jk}$ since the mass eigenstates are orthonormal. It then follows that the oscillation probability is given by
 \begin{equation}
-    P_{\nu_\alpha \rightarrow \nu_\beta}(t) = \sum_{k,j} U^*_{\alpha k} U_{\beta k} U_{\alpha j} U^*_{\beta j} e^{-i(E_k-E_j)t}
+    P_{\nu_\alpha \rightarrow \nu_\beta}(t) = \sum_{k,j} U^*_{\alpha k} U_{\beta k} U_{\alpha j} U^*_{\beta j} e^{-i(E_k-E_j)t}.
 \end{equation}
-Under the assumption that neutrinos are relativistic, the mass state energy may be expressed in terms of the neutrino energy, \textit{E},
+Under the assumption that neutrinos are relativistic, the mass state energy, $E_k$, may be expressed in terms of the neutrino energy, \textit{E},
 \begin{equation}
     E_k = \sqrt{|\Vec{p}|^2 + m_k^2} \simeq E + \frac{m_k^2}{2E}.
 \end{equation}
-By noting that the mass splitting, $\Delta^2_{kj}$, is defined as 
+By noting that the mass splitting, $\Delta m^2_{kj}$, is defined as 
 \begin{equation}
     \Delta m^2_{kj} = m_k^2 - m_j^2
 \end{equation}
@@ -165,17 +165,25 @@ and that for highly relativistic particles $t \approx L$, where L is known as th
      P_{\nu_\alpha \rightarrow \nu_\beta}(L,E) = \sum_{k,j} U^*_{\alpha k} U_{\beta k} U_{\alpha j} U^*_{\beta j} e^{-i\frac{\Delta m^2_{kj}L}{2E}}.
 \end{equation}
 Finally, in a two flavour oscillation regime, the oscillation probability may be simplified to
+\begin{comment}
 \begin{equation}
 \begin{split}
     P_{\nu_\alpha \rightarrow \nu_\beta} &= \sin^2(2\theta)sin^2(\frac{\Delta m^2L}{4E}), \ \ \ \ \nu_\alpha \neq \nu_\beta   \\
     P_{\nu_\alpha \rightarrow \nu_\alpha} &= 1 - P_{\nu_\alpha \rightarrow \nu_\beta},
 \end{split}
 \end{equation}
+\end{comment}
+\begin{equation}
+  P_{\nu_\alpha \rightarrow \nu_\beta}=\begin{cases}
+    \sin^2(2\theta)sin^2(\frac{\Delta m^2L}{4E}), & \nu_\alpha \neq \nu_\beta \\
+    1 - \sin^2(2\theta)sin^2(\frac{\Delta m^2L}{4E}), & \nu_{\alpha} = \nu_{\beta},
+  \end{cases}
+\end{equation}
 where the mixing matrix has been reduced to a rotation matrix \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
 
-It should be noted that what neutrino experiments probe is the mass splitting and not the absolute neutrino masses. It is understood from oscillation experiments that, $\Delta m_{21}^2$, known as the solar mass splitting, is equal to $7.5 \times 10^{-5}$ eV$^2$ and that $|\Delta m_{31}^2|$, known as the atmospheric mass splitting, is equal to $2.4 \times 10^{-3}$ eV$^2$. The sign of the atmospheric mass splitting is however unknown i.e. it is an open question whether $m_3$ is the heaviest or the lightest neutrino mass state. This leads to two possibilities, the so called \textit{normal hierarchy} where the neutrino mass states increase from $m_{1 \rightarrow 2 \rightarrow 3}$ or the \textit{inverted hierarchy} where the mass states increase from $m_{3 \rightarrow 1 \rightarrow 2}$. 
+It should be noted that what neutrino experiments probe is the mass splitting and not the absolute neutrino masses. It is understood from oscillation experiments that, $\Delta m_{21}^2$, known as the solar mass splitting, is equal to $7.5 \times 10^{-5}$ eV$^2$ and that $|\Delta m_{31}^2|$, known as the atmospheric mass splitting, is equal to $2.4 \times 10^{-3}$ eV$^2$. The sign of the atmospheric mass splitting is however unknown i.e. it is an open question whether $m_3$ is the heaviest or the lightest neutrino mass state. This leads to two possibilities, the so called \textit{normal hierarchy} where the neutrino mass states increase from $m_{1 \rightarrow 2 \rightarrow 3}$ or the \textit{inverted hierarchy} where the mass states increase from $m_{3 \rightarrow 1 \rightarrow 2}$. The best fit values for oscillation parameters and the \gls{cp} violating phase from a 3-flavour neutrino framework are shown in \TableRef{table:Best fit params} for both the normal and inverted hierarchy. The numbers have been provided by the 2020 edition of the \gls{pdg} collaboration \cite{PDG_2020}. 
 
-The nature of the neutrino hierarchy has major impacts on several areas. Within the inverted hierarchy, there is a lower bound on the Majorana mass of the electron neutrino mass. If neutrinoless double beta decay experiments can put bounds on the neutrino mass below this, the inverted hierarchy may be ruled out (under the assumption that neutrinos are Majorana in nature). Alternatively, if the inverted hierarchy is realised, neutrinoless double beta experiments are promising ways to determine whether neutrinos are Majorana particles or not. There are also a number of theories which predict either the normal or inverted hierarchy, so determining the hierarchy will be strong motivator in determining the credibility of a given theory \cite{mass_hierarchy}.
+The nature of the neutrino hierarchy has major impacts on several areas. Within the inverted hierarchy, there is a lower bound on the Majorana mass of the electron neutrino mass. If neutrinoless double beta decay experiments can put bounds on the neutrino mass below this, the inverted hierarchy may be ruled out (under the assumption that neutrinos are Majorana in nature). Alternatively, if the inverted hierarchy is realised, neutrinoless double beta experiments are promising ways to determine whether neutrinos are Majorana particles or not. There are also a number of theories which predict either the normal or inverted hierarchy, so determining the hierarchy will be a strong motivator in determining the credibility of a given theory \cite{mass_hierarchy}.
 
 \begin{figure}
     \centering
@@ -206,18 +214,18 @@ $\delta_{CP}$       & \multicolumn{1}{l}{$1.36^{+0.20}_{-0.16} \pi$ rad}        
 There have been a number of experimental results which are not consistent with oscillations in a three neutrino model. Most of these anomalous results can be explained by oscillations with one or more eV scale neutrinos pointing towards the existence of at least one light sterile neutrino. The experiments which have seen results seemingly in favour of eV scale sterile neutrinos will be discussed in the upcoming sections. There are however tensions between the results in favour of additional neutrino flavours and the null results from experiments such as \gls{karmen} and \gls{minos} \cite{Where_are_we_with_light_sterile_neutrinos}. The  \gls{karmen}  experiment  was  sensitive  to $\numu \rightarrow \nue$  and  $\numubar \rightarrow \nuebar$ over a baseline of 17.6 m.  No evidence of oscillations were found and a 90\% confidence level exclusion limit was placed on $\Delta m^2 > 100$ $eV^2$ with $\sin^2{2\theta} < 4\times 10^{-2}$ and $\sin^2{2\theta} < 8.5 \times 10^{-3}$ for neutrinos and anti-neutrinos respectively \cite{KARMEN}.  The \gls{minos} experiment used a predominantly muon-neutrino beam with a peak energy of 3 GeV with the near detector being at a baseline of 1.04 km.  Again, no evidence of oscillations was observed.  For a mass splitting of $\Delta m^2_{42} = 0.5$ eV$^2$, the value of $\sin^2{2\theta_{24}}$ was constrained to be less than 0.016 for a 90\% confidence level \cite{MINOS}.
 
 \subsection{LSND}
-The \gls{lsnd} experiment involved a close to 800 MeV proton beam which produced mainly $\pi^+$ and was designed to focus on the search for $\numubar \rightarrow \nuebar$ appearance where the \numubar's were a result from the decay of anti-muons which in turn were produced from the decay of at rest $\pi^+$. The detector consisted of a tank filled with 167 tons of liquid scintillator positioned 30m from the neutrino beam source and was able to detect both Cerenkov and scintillation light. The \nuebar appearance signal was identified from the $\nuebar + p \rightarrow \positron + n$ reaction with the signature of the reaction being the energy of the \positron and the energy of a gamma as a result of neutron capture on a free proton. The \gls{lsnd} experiment observed an excess of 87.96 \pm 22.46 \pm 6.0 events from $\nuebar + p \rightarrow \positron + n$ reactions which corresponds to a 3.8$\sigma$ excess which is shown in \FigureRef{fig:LSND excess} \cite{LSND_excess}. This was the first experiment to point towards the existence of an eV scale neutrino. 
+The \gls{lsnd} experiment involved a close to 800 MeV proton beam which produced mainly $\pi^+$ and was designed to focus on the search for $\numubar \rightarrow \nuebar$ appearance where the \numubar's were a result from the decay of anti-muons which in turn were produced from the decay of at rest $\pi^+$. The detector consisted of a tank filled with 167 tons of liquid scintillator positioned 30 m from the neutrino beam source and was able to detect both Cerenkov and scintillation light. The \nuebar appearance signal was identified from the $\nuebar + p \rightarrow \positron + n$ reaction with the signature of the reaction being the energy of the \positron and the energy of a gamma as a result of neutron capture on a free proton. The \gls{lsnd} experiment observed an excess of 87.96 \pm 22.46 \pm 6.0 events from $\nuebar + p \rightarrow \positron + n$ reactions which corresponds to a 3.8$\sigma$ excess which is shown in \FigureRef{fig:LSND excess} \cite{LSND_excess}. This was the first experiment to point towards the existence of an eV scale neutrino. 
 
 \begin{figure}[h]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/LSND_excess.png}
-    \caption[LSND excsess.]{The \gls{lsnd} excess as a function of the neutrino L/E value. Events require a positron in the energy range $20 < E < 60$ MeV and a likelihood ratio of > 10 that the associated gamma was correlated (i.e. $\frac{\mathcal{L}_{\gamma}(correlated)}{\mathcal{L}_{\gamma}(accidental)} > 10$). \cite{LSND_excess}}
+    \caption[LSND excsess.]{The \gls{lsnd} excess as a function of the neutrino L/E value. Events require a positron in the energy range $20 < E < 60$ MeV and a likelihood ratio of > 10 that the associated gamma was correlated (i.e. $\frac{\mathcal{L}_{\gamma}(correlated)}{\mathcal{L}_{\gamma}(accidental)} > 10$) \cite{LSND_excess}.}
     \label{fig:LSND excess}
 \end{figure}
 \newpage
 
 \subsection{MiniBooNE}
-The \gls{miniboone} collected data from the \gls{bnb} operating in both neutrino and anti-neutrino mode. The \gls{bnb} is described in detail in \SectionRef{sec:BNB}. The (anti)neutrinos had an energy range of $200 < E_\nu < 1250$ MeV and the baseline of the experiment was 540m. Similar to \gls{lsnd}, \gls{miniboone} was searching for  $\overset{\scriptscriptstyle(-)}{\nue}$ appearance from a predominantly $\overset{\scriptscriptstyle(-)}{\numu}$ beam. In neutrino mode, \gls{miniboone} observed an excess of 381.2\pm85.2 \gls{ccqe} events which corresponds to a 4.5$\sigma$ excess. This is shown in \FigureRef{fig:MiniBooNE excess}. Combining this with the anti-neutrino data, an excess of 460.5\pm99.0 \gls{ccqe} events (4.7$\sigma$) were observed. A two neutrino model is assumed so that a comparison with \gls{lsnd} data can be made, however this results in the appearance and disappearance data not being compatible with one another. This may be resolved by assuming a different model to the 3+1 neutrino framework. The results are consistent with those seen by \gls{lsnd} and again point to the existence of additional neutrino flavours beyond the three predicted by the \gls{sm} \cite{MiniBooNE_excess}. 
+The \gls{miniboone} collected data from the \gls{bnb} operating in both neutrino and anti-neutrino mode. The \gls{bnb} is described in detail in \SectionRef{sec:BNB}. The (anti-)neutrinos had an energy range of $200 < E_\nu < 1250$ MeV and the baseline of the experiment was 541 m. Similar to \gls{lsnd}, \gls{miniboone} was searching for  $\overset{\scriptscriptstyle(-)}{\nu}_e$ appearance from a predominantly $\overset{\scriptscriptstyle(-)}{\nu}_{\mu}$ beam. In neutrino mode, \gls{miniboone} observed an excess of 381.2\pm85.2 \gls{ccqe} events which corresponds to a 4.5$\sigma$ excess. This is shown in \FigureRef{fig:MiniBooNE excess}. Combining this with the anti-neutrino data, an excess of 460.5\pm99.0 \gls{ccqe} events (4.7$\sigma$) were observed. A two neutrino model is assumed so that a comparison with \gls{lsnd} data can be made, however this results in the appearance and disappearance data not being compatible with one another. This may be resolved by assuming a different model to the 3+1 neutrino framework. The results are consistent with those seen by \gls{lsnd} and again point to the existence of additional neutrino flavours beyond the three predicted by the \gls{sm} \cite{MiniBooNE_excess}. 
 \begin{figure}[h]
     \centering
     \includegraphics[width = \largefigwidth]{figures-chap2/MiniBooNE_excess.png}
@@ -254,7 +262,7 @@ Within the \gls{sm} Lagrangian, the Dirac mass term is given by $m_D\Bar{\psi}\p
     &= m_D(\overline{\psi_L}\psi_R + \overline{\psi_R}\psi_L),
 \end{split}
 \end{equation} 
-where the second step follows from \EquationRef{eqn:chiral identity}. Naturally, to have a non-zero Dirac mass term, particles require a left and right handed chiral state. This is the mass generation method that all particles in the \gls{sm} follow and hence why neutrinos are massless in the \gls{sm}. To give the neutrino mass in this way, we could just introduce a field associated with a right handed neutrino. This would usually correspond to the left handed neutrinos being the \textit{active} ones, whilst the right handed neutrinos would be considered \textit{sterile}. Since left handed particles form a doublet under \SUgroup2 they have non-zero weak isospin and because right handed particles are a singlet under \SUgroup2, their weak isospin is equal to zero. Therefore, in order to get a term where the isospin sums to zero, which is a requirement to be gauge invariant, an additional field is needed that is also a doublet under \SUgroup2. This field is a result of the neutral Higgs boson, $\phi^0$, and the Dirac mass is given by
+where the second step follows from \EquationRef{eqn:chiral identity}. Naturally, to have a non-zero Dirac mass term, particles require a left and right handed chiral state. This is the mass generation method that all particles in the \gls{sm} follow and hence why neutrinos are massless in the \gls{sm}. To give the neutrino mass in this way, one could just introduce a field associated with a right handed neutrino. This would usually correspond to the left handed neutrinos being the \textit{active} ones, whilst the right handed neutrinos would be considered \textit{sterile}. Since left handed particles form a doublet under \SUgroup2 they have non-zero weak isospin and because right handed particles are a singlet under \SUgroup2, their weak isospin is equal to zero. Therefore, in order to get a term where the isospin sums to zero, which is a requirement to be gauge invariant, an additional field is needed that is also a doublet under \SUgroup2. This field is a result of the neutral Higgs boson, $\phi^0$, and the Dirac mass is given by
 \begin{equation}
     m_D = y\braket{\phi^0} = \frac{yv}{\sqrt{2}},
 \end{equation}
@@ -295,7 +303,7 @@ where the central $4 \times 4$ matrix is known as the mass matrix, $\mathcal{M}$
     m_2 \simeq m_R.
 \end{split}
 \end{equation}
-Since we have said that $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism does require neutrinos to be Majorana particles, but does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
+Since we have said that $m_R \gg m_D$, $m_2$ is also large and $m_1$ is small since the value of $m_D^2$ is suppressed by the large value of $m_R$ in the denominator. Furthermore, the larger the value of $m_2$, the smaller the value of $m_1$. This linked relationship gives rise to the so-called \textit{seesaw mechanism}. $m_1$ would give the mass scale of the active neutrinos whereas $m_2$ would be a heavy sterile neutrino. This mechanism requires neutrinos to be Majorana particles, but does provide an explanation on the relative smallness of the neutrino masses compared with other \gls{sm} particles \cite{Fundamentals_of_Neutrino_Physics_and_Astrophysics}. 
 
 
 \subsection{Sterile Neutrino Oscillations}\label{sec:sterile_neutrino_oscillations}
@@ -315,7 +323,8 @@ For simplicity, often only the case with one sterile neutrino is considered. Thi
 
 \begin{equation}
     P_{\nu_\alpha \rightarrow \nu_\beta} = \Kronecker_{\alpha \beta} -4|U_{\alpha \beta}|^2 (\Kronecker_{\alpha \beta} -|U_{\alpha \beta}|^2)sin^2\left(\frac{\Delta m^2_{41}L}{4E} \right),
-\end{equation}\label{eqn:sterile_osc_prob}
+\label{eqn:sterile_osc_prob}
+\end{equation}
 where $\delta_{\alpha\beta}$ is the Kronecker delta between states $\alpha$ and $\beta$, $U_{\alpha \beta}$ are the relevant entries from the \gls{pmns} matrix and $\Delta m^2_{41}$ is the mass splitting involving the sterile neutrino state \cite{SBN_paper}. 
 
 When performing a search for sterile neutrinos, typically there are three channels, one or more of which may be probed (plus their corresponding anti-neutrino variants). For each of these channels, the relevant \gls{pmns} matrix elements are parameterised in terms of mixing angles such that,
