--- a/chap5-oscillation_inputs.tex
+++ b/chap5-oscillation_inputs.tex
@@ -515,7 +515,8 @@ If any correlated errors are assumed to by fully correlated, $\mathcal{M}_{ij}$ 
 	\end{tabular}
 \end{adjustbox}
 \caption[Binning scheme for the efficiency uncertainties.]{The binning scheme used to produce the efficiency uncertainty covariance matrices.}
-\end{table}\label{table:efficiency_systematics}
+\label{table:efficiency_systematics}
+\end{table}
 
 All future discussion involving correlated uncertainties should from here on be assumed to be fully correlated even if not explicitly stated. A set of example covariance matrices are shown in \FigureRef{fig:efficiency_cov_matrices}. The top left plot corresponds to a 10\% correlated error only. The remaining three plots all have a correlated error of 2\%, with some varying amounts of an uncorrelated error associated with each systematic. 
 
