--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 
 %% Define the un-numbered front matter (cover pages, rubrik and table of contents)
 \begin{frontmatter}
-  \input{frontmatter}
+%  \input{frontmatter}
 \end{frontmatter}
 
 %% Start the content body of the thesis
@@ -58,9 +58,9 @@
   %\input{chap1-introduction}
   %\input{chap2-motivation_for_steriles}
   %\input{chap3-SBN_Program}
-  \input{chap4-Energy_Reco}
-  %\input{chap5-oscillation_inputs}
-  \input{chap6-valor_analysis}
+  %\input{chap4-Energy_Reco}
+  \input{chap5-oscillation_inputs}
+  %\input{chap6-valor_analysis}
   %\input{chap7-Conclusion}
   %% To ignore a specific chapter while working on another, making the build faster, comment it out:
   %\input{chap4}
